src/test/ui/blind-item-item-shadow.stderr
error[E0255]: the name `foo` is defined multiple times
  --> $DIR/blind-item-item-shadow.rs:13:5
   |
LL | mod foo { pub mod foo {  } }
   | ------- previous definition of the module `foo` here
LL | 
LL | use foo::foo;
   |     ^^^^^^^^ `foo` reimported here
   |
   = note: `foo` must be defined only once in the type namespace of this module
help: You can use `as` to change the binding name of the import
   |
LL | use foo::foo as other_foo;
   |     ^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0255"
